[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
#addopts = "--grpc-fake-server --cov=yagrc --cov-report term-missing"
addopts = "--grpc-fake-server"
required_plugins = ["pytest-grpc"]
testpaths = ["tests"]
