[metadata]
name = yagrc
url = https://github.com/sparky8512/yagrc
author_email = sparky8512-py@yahoo.com
license = Apache License 2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
description = Yet another gRPC reflection client
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    grpcio
    grpcio_reflection
    protobuf
packages =
    yagrc
package_dir =
    =src
python_requires = >=3.5

[options.extras_require]
test = pytest; pytest-grpc

[yapf]
based_on_style = google
